Animação da Logo

--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -1,4 +1,4 @@
-.slidein {
+/* .slidein {
     -moz-animation-duration: 3s;
     -webkit-animation-duration: 3s;
     animation-duration: 3s;
@@ -67,7 +67,7 @@
       width: 100%;
       opacity: 100%;
     }
-  }
+  } */
 
 
 
