--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,11 +1,9 @@
-.login_user {
-    background: rgb(210, 220, 221);
-}
-
 .container_home {
     padding-left: 50px;
     padding-right: 25px;
     padding-top: 25px;
+    width: 100%;
+    height: 100vh;
 }
 
 .home_cards_item {
