--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -35,16 +35,28 @@
 
 .cursos {
     background: #e85041;
+    box-shadow: 0px 3px 0 #921004;
+    -webkit-box-shadow: 0px 3px 0 #921004;
+    -moz-box-shadow: 0px 3px 0 #921004;
 }
 
 .gastos {
     background: #45008c;
+    box-shadow: 0px 3px 0 #1b0036;
+    -webkit-box-shadow: 0px 3px 0 #1b0036 ;
+    -moz-box-shadow: 0px 3px 0 #1b0036 ;
 }
 
 .trilha {
     background: #01b59b;
+    box-shadow: 0px 3px 0 #008080;
+    -webkit-box-shadow: 0px 3px 0 #008080 ;
+    -moz-box-shadow: 0px 3px 0 #008080 ;
 }
 
 .poupaqui {
     background: #ffb45b;
+    box-shadow: 0px 3px 0 #c56b00;
+    -webkit-box-shadow: 0px 3px 0 #c56b00 ;
+    -moz-box-shadow: 0px 3px 0 #c56b00 ;
 }
