--- a/src/components/Home/Menu/Menu.css
+++ b/src/components/Home/Menu/Menu.css
@@ -1,45 +1,45 @@
-.container-menu {
-    background-color: #054086;
-    width: 17px;
-    height: 500px;
-    display: flex;
-    position: fixed;
-    border-radius: 0px 0px 18px 0px;
-}
+/* MY CODE */
 
 .icone-menu {
-    display: flex;
-    position: fixed;
-    background: #054086;
-    width: 50px;
-    height: 50px;
-    top: 440px;
-    border-radius: 18px 18px 18px 0px;
-    z-index: 2;
+  background: #054086;
+  border-radius: 0px 0px 20px 0px;
+  position: fixed;
+  width: 40px;
+  height: 70px;
+  left: 0px;
+  top: 0px;
+  display: flex;
+
 }
 
-.icone_menu_svg {
-    left: 20px; 
+.icone-menu img {
+  width: 36px;
+  height: 56px;
 }
 
-.icone_menu_svg img {
-}
 
+
+
+/* MY CODE */
 
 /* Position and sizing of burger button */
 .bm-burger-button {
-  position: absolute;
-  width: 22px;
-  height: 22px;
-  left: 15px;
-  top: 13px
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 20px;
+  top: 20px;
 }
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-    /* background-image: url("../../../images/icon_menu.svg"); */
+  /* background: #373a47; */
 }
 
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  /* background: #a90000; */
+}
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
@@ -63,7 +63,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* General sidebar styles */
 .bm-menu {
-  background: #081b70;
+  background: #373a47;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
