--- a/src/components/Home/ListaCursos/ListaCursos.css
+++ b/src/components/Home/ListaCursos/ListaCursos.css
@@ -32,7 +32,8 @@
 .lista_content {
     display: flex;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
+    height: 100%;
     border-left: 7px solid #20b2aa;
     border-right: 7px solid #e85141;
     border-radius: 5px;
@@ -46,7 +47,8 @@
 .lista_content--inativo {
     display: flex;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
+    height: 100%;
     border-left: 7px solid #c8c8c8;
     border-right: 7px solid #c8c8c8;
     border-radius: 5px;
@@ -59,9 +61,9 @@
 
 .box_lista {
     background: #FFF;
-    height: 100%;
-    padding: 15px;
     width: 100%;
+    min-height: 100%;
+    padding: 15px;
 }
 
 .box_lista p {
