--- a/src/components/Home/Menu/Menu.css
+++ b/src/components/Home/Menu/Menu.css
@@ -62,14 +62,14 @@
   margin-left: 25px;
 }
 
-.config {
+.config-menu {
   margin-top: 30px;
 }
 
 .footer-menu {
   display: flex;
   align-items: center;
-  padding-top: 50%;
+  padding-top: 50px;
   color: #FFF;
   font-size: 9pt;
 }
